--- a/Cover-letter.html
+++ b/Cover-letter.html
@@ -13,9 +13,9 @@
         <nav class="nav">
             <img src="" alt="">
             <ul>
-                <li><a href="C:\Users\Yeyian PC\Downloads\HTML projects\Portfolio\test\Cover-letter.html">COVER-LETTER</a></li>
-                <li><a href="C:\Users\Yeyian PC\Downloads\HTML projects\Portfolio\test\Resume.html">RESUME</a></li>
-                <li><a href="C:\Users\Yeyian PC\Downloads\HTML projects\Portfolio\test\Career-goal.html">CAREER-GOAL</a></li>
+                <li><a href="Cover-letter.html">COVER-LETTER</a></li>
+                <li><a href="C:Resume.html">RESUME</a></li>
+                <li><a href="Career-goal.html">CAREER-GOAL</a></li>
             </ul>
         </nav>
         <div class="detel">
