Update and rename Career-goal.html to index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="Cover-letter.html">COVER-LETTER</a></li>
                 <li><a href="Resume.html">RESUME</a></li>
-                <li><a href="Career-goal.html">CAREER-GOAL</a></li>
+                <li><a href="index.html">CAREER-GOAL</a></li>
             </ul>
         </nav>
         <div class="detel">
