--- a/Cover-letter.html
+++ b/Cover-letter.html
@@ -14,7 +14,7 @@
             <img src="" alt="">
             <ul>
                 <li><a href="Cover-letter.html">COVER-LETTER</a></li>
-                <li><a href="C:Resume.html">RESUME</a></li>
+                <li><a href="Resume.html">RESUME</a></li>
                 <li><a href="index.html">CAREER-GOAL</a></li>
             </ul>
         </nav>
