--- a/Cover-letter.html
+++ b/Cover-letter.html
@@ -11,6 +11,7 @@
     </head>
     <body>
         <nav class="nav">
+            <img src="" alt="">
             <ul>
                 <li><a href="Cover-letter.html">COVER-LETTER</a></li>
                 <li><a href="Resume.html">RESUME</a></li>
