--- a/Resume.html
+++ b/Resume.html
@@ -14,6 +14,7 @@
     <body>
         <script>console.log("Hello, world!");</script>
         <nav class="nav">
+            <img src="" alt="">
             <ul>
                 <li><a href="Cover-letter.html">COVER-LETTER</a></li>
                 <li><a href="Resume.html">RESUME</a></li>
