--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <nav class="nav">
+            <img src="" alt="">
             <ul>
                 <li><a href="Cover-letter.html">COVER-LETTER</a></li>
                 <li><a href="Resume.html">RESUME</a></li>
